force-app/main/default/objects/Subject__c/Subject__c.object-meta.xml
<CustomObject>
    <label>Subject</label>
    <nameField>
        <displayFormat>Sub_Id-{0000}</displayFormat>
        <label>Subject Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subject</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>