force-app/main/default/objects/Subject__c/fields/PaPatienttient__c.field-meta.xml
<CustomField>
    <fullName>PaPatienttient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patients__c</referenceTo>
    <relationshipLabel>Subject (Patient)</relationshipLabel>
    <relationshipName>Subject1</relationshipName>
    <type>Lookup</type>
</CustomField>