force-app/main/default/objects/Subject__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Patient</label>
    <referenceTo>Patients__c</referenceTo>
    <relationshipLabel>Subject</relationshipLabel>
    <relationshipName>Subject</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>